add file, fix file

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -52,3 +52,5 @@ commands:
     description: teleport to player
   tohu world list:
     description: world list
+  tohu give item:
+    description: give item
